// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/hub/Views/SetupView More Snapshot tests with react-test-renderer, but for edge cases edge case where activeIndex not in steps index 1`] = `
<div
  className="full-height flex-container flex-dir-column"
>
  <div
    className="flex-child-grow"
  />
  <div>
    <a
      aria-current="page"
      className="SteppedNavigation__exit flex-container align-middle active"
      href="/"
      onClick={[Function]}
      style={Object {}}
    >
      <span
        className="SteppedNavigation__exitText"
      >
        Exit Custom Setup
      </span>
      <span
        className="SteppedNavigation__exitIcon"
      />
    </a>
    <div
      className="SteppedNavigation flex-container"
    >
      <div
        className="flex-child-grow flex-container flex-dir-row-reverse"
      >
        <div
          className="SteppedNavigation__buttonContainer"
        />
      </div>
      <div
        className="SteppedNavigation__circles flex-container align-center-middle"
      >
        <a
          aria-current={null}
          className={undefined}
          href="/test/1"
          onClick={[Function]}
          style={undefined}
        />
        <a
          aria-current={null}
          className={undefined}
          href="/test/2"
          onClick={[Function]}
          style={undefined}
        />
      </div>
      <div
        className="flex-child-grow"
      >
        <div
          className="SteppedNavigation__buttonContainer"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`app/hub/Views/SetupView More Snapshot tests with react-test-renderer, but for edge cases edge case where steps is empty array 1`] = `
<div
  className="full-height flex-container flex-dir-column"
>
  <div
    className="flex-child-grow"
  />
  <div
    className="SteppedNavigation__isNull"
  />
</div>
`;

exports[`app/hub/Views/SetupView Snapshot tests with react-test-renderer setup view is rendered correctly on first route 1`] = `
<div
  className="full-height flex-container flex-dir-column"
>
  <div
    className="flex-child-grow"
  >
    <div>
      <div
        className="row align-center"
      >
        <div
          className="columns"
        >
          <div
            className="row align-middle align-center"
          >
            <div
              className="columns shrink"
            >
              <img
                src="image for title test 1"
              />
            </div>
            <div
              className="columns shrink"
            >
              <h3
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "title test 1",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
      <div>
        test component
      </div>
    </div>
  </div>
  <div>
    <a
      aria-current="page"
      className="SteppedNavigation__exit flex-container align-middle active"
      href="/"
      onClick={[Function]}
      style={Object {}}
    >
      <span
        className="SteppedNavigation__exitText"
      >
        Exit Custom Setup
      </span>
      <span
        className="SteppedNavigation__exitIcon"
      />
    </a>
    <div
      className="SteppedNavigation flex-container"
    >
      <div
        className="flex-child-grow flex-container flex-dir-row-reverse"
      >
        <div
          className="SteppedNavigation__buttonContainer"
        />
      </div>
      <div
        className="SteppedNavigation__circles flex-container align-center-middle"
      >
        <a
          className="active"
        />
        <a
          aria-current={null}
          className={undefined}
          href="/test/2"
          onClick={[Function]}
          style={undefined}
        />
      </div>
      <div
        className="flex-child-grow"
      >
        <div
          className="SteppedNavigation__buttonContainer flex-container align-center-middle"
        >
          <a
            aria-current={null}
            className="button primary"
            href="/test/2"
            onClick={[Function]}
            style={undefined}
          >
            Next
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`app/hub/Views/SetupView Snapshot tests with react-test-renderer setup view is rendered correctly on last route 1`] = `
<div
  className="full-height flex-container flex-dir-column"
>
  <div
    className="flex-child-grow"
  >
    <div>
      <div
        className="row align-center"
      >
        <div
          className="columns"
        >
          <div
            className="row align-middle align-center"
          >
            <div
              className="columns shrink"
            >
              <img
                src="image for title example 3"
              />
            </div>
            <div
              className="columns shrink"
            >
              <h3
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "title example 3",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
      <div>
        test component
      </div>
    </div>
  </div>
  <div>
    <div />
    <div
      className="SteppedNavigation flex-container"
    >
      <div
        className="flex-child-grow flex-container flex-dir-row-reverse"
      >
        <div
          className="SteppedNavigation__buttonContainer flex-container align-center-middle"
        >
          <a
            aria-current={null}
            className="button hollow primary"
            href="/example/2"
            onClick={[Function]}
            style={undefined}
          >
            Previous
          </a>
        </div>
      </div>
      <div
        className="SteppedNavigation__circles flex-container align-center-middle"
      >
        <a
          aria-current={null}
          className={undefined}
          href="/example/1"
          onClick={[Function]}
          style={undefined}
        />
        <a
          aria-current={null}
          className={undefined}
          href="/example/2"
          onClick={[Function]}
          style={undefined}
        />
        <a
          className="active"
        />
      </div>
      <div
        className="flex-child-grow"
      >
        <div
          className="SteppedNavigation__buttonContainer flex-container align-center-middle"
        >
          <a
            aria-current="page"
            className="button primary active"
            href="/"
            onClick={[Function]}
            style={Object {}}
          >
            Done
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
